--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
     <header>
         <nav id="top-menu"></nav>
+        <header>
+            <nav id="top-menu"></nav>
+            <!-- Add the <nav> element below -->
+            <nav id="sub-menu"></nav>
+        </header>
     </header>
     <main></main>
 </body>
